fix svn command and repository url

--- a/howtoinstall.tex
+++ b/howtoinstall.tex
@@ -138,7 +138,7 @@
   Gentoo LinuxやFreeBSDを利用していない場合は，以下のSVNを用いて最新版
   (開発版)をダウンロードします．
   \begin{lstlisting}
-   $ svn clone svn://toshia.dip.jp/mikutter/trunc mikutter
+   $ svn checkout svn://toshia.dip.jp/mikutter/trunk mikutter
   \end{lstlisting}
  \section{実行} \label{execute}
  実行は，インストールした方法により変わってきます．Gentoo LinuxやFreeBSD
